# wisprnito

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: config.rs  main.rs  menubar.rs
src/audio/: devices.rs  mod.rs  routing.rs  stream.rs
src/dsp/: formant.rs  mod.rs  params.rs  phase_vocoder.rs  pipeline.rs  resampler.rs  stft.rs
src/platform/: linux.rs  macos.rs
