[package]
name = "wisprnito"
version = "0.1.0"
edition = "2021"
description = "Real-time voice anonymizer to defeat voice fingerprinting by STT models"
repository = "https://github.com/devpolo/wisprnito"
license = "MIT"
keywords = ["audio", "privacy", "voice", "anonymizer", "microphone"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "wisprnito"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
ringbuf = "0.4"
rustfft = "6.4"
realfft = "3.5"
rubato = "0.15"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-complex = "0.4"
thread-priority = "1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
